--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,14 +42,28 @@ dependencies:
   lottie: ^1.4.2
   settings_ui: ^2.0.2
   url_launcher: ^6.1.5
-  babstrap_settings_screen: ^0.1.3
   firebase_auth:
   firebase_core:
   google_sign_in:
   shared_preferences: ^2.0.15
   provider:
+  dialogs: ^0.0.7
+  auto_size_text: ^3.0.0
+  fluttertoast: ^8.1.1
   http:
-  flutter_facebook_auth: ^4.4.1+1
+  flutter_svg:
+  toast:
+  modal_bottom_sheet: ^2.1.2
+  circular_image:
+  form_field_validator: ^1.1.0
+  image_picker: ^0.8.5+3
+  flutter_advanced_avatar: ^1.1.0
+  youtube_player_flutter:
+  awesome_snackbar_content: ^0.0.8
+
+
+
+
 
 
 
